# cocoplus

./: .gitignore  mosquitto.conf
cocoplus/: CMakeLists.txt
cocoplus/components/motors/: driver.c  driver.h
cocoplus/components/mqtt_client/: my_mqtt_client.c
cocoplus/components/sensors/: distance.c  distance.h  sensors.c  sensors.h
cocoplus/main/: CMakeLists.txt  cocoplus_main.c  cocoplus_main.h
cocoplus/main/components/mqtt_client/: my_mqtt_client.c
cocoplus/tasks/: drive.c  drive.h  publish.c  publish.h
packmaster/: .clangd  CMakeLists.txt  compile_commands.json
packmaster/include/: controller.h  data_parser.h  health_tracker.h  monitor.h  mqtt_client.h  robot_view.h
packmaster/src/: controller.cpp  data_parser.cpp  health_tracker.cpp  main.cpp  monitor.cpp  mqtt_client.cpp  robot_view.cpp
packmaster/test/: CMakeLists.txt  test_data_parser.cpp
